clusters/platform/compiled/docs/v1.Namespace-docs.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    tanka.dev/environment: 95f2e5977737602092bf0877799bea7da9b9d31f0678674c
  name: docs
