clusters/platform/compiled/docs/v1.Service-handbook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: handbook
    app.kubernetes.io/name: handbook
  name: handbook
  namespace: docs
spec:
  ports:
  - name: handbook-http
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: handbook
    app.kubernetes.io/name: handbook
